--- a/docs/app/assets/css/main.css
+++ b/docs/app/assets/css/main.css
@@ -1,7 +1,7 @@
 @import "tailwindcss" theme(static);
 @import "@nuxt/ui-pro";
 
-@source "../../../content";
+@source "../../../content/**/*.md";
 
 @theme static {
   --font-sans: 'Public Sans', sans-serif;
