--- a/docs/app/assets/css/main.css
+++ b/docs/app/assets/css/main.css
@@ -1,7 +1,8 @@
-@import "tailwindcss" theme(static);
+@import "tailwindcss";
 @import "@nuxt/ui-pro";
 
-@source "../../../content/**/*.md";
+@source "../../../content/**/*";
+@source "../../../node_modules/docus/app/**/*";
 
 @theme static {
   --font-sans: 'Public Sans', sans-serif;
